--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-IMG_DIR=../OSTJourney/static/images/covers
-SONGS_DIR=../songs_fallback/songs
-ROOT_DIR=../OSTJourney
+IMG_DIR=test/images
+SONGS_DIR=test/songs
+ROOT_DIR=test
